<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioA1A4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/a1a4" />

            <RadioButton
                android:id="@+id/radioD3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/d3" />

            <RadioButton
                android:id="@+id/radioD1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/d1" />

            <RadioButton
                android:id="@+id/radioE2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/e2" />

            <RadioButton
                android:id="@+id/radioGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other" />
        </RadioGroup>

        <ListView
            android:id="@+id/cmdListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </ListView>
    </LinearLayout>

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent" />

    <com.hantek.ttia.view.ScrollViewExt
        android:id="@+id/debugScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/clearButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear" />

            <TextView
                android:id="@+id/debugTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp" />
        </LinearLayout>
    </com.hantek.ttia.view.ScrollViewExt>

</LinearLayout>