<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_background_day">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/roadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_input_driverid"
            style="@style/txt_login_driver_id"/>

        <!-- Login progress -->

        <LinearLayout
            android:id="@+id/login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/login_progress_signing_in"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/digiButton1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_1"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_2"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_3"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_4"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_5"
                            style="@style/btn_login_digit"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/digiButton6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_6"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_7"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_8"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_9"
                            style="@style/btn_login_digit"/>

                        <Button
                            android:id="@+id/digiButton0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:text="@string/digi_0"
                            style="@style/btn_login_digit"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/backspaceButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="←"
                    style="@style/btn_login_digit"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="5"
                    android:text="@string/clean"
                    style="@style/btn_login_digit"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    style="@style/btn_login_digit"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000-000"
        android:id="@+id/car_id"
        style="@style/btn_cid"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="---"
        android:id="@+id/version"
        style="@style/btn_cid_night"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>